feat: Implement Drizzle ORM for PostgreSQL with migration support

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
+DB_ORM_TYPE=typeorm # typeorm or drizzle
+
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=
 DB_PASSWORD=
 DB_DATABASE=library_db 
+
 PORT=3000
