feat: implement pagination and global exception handling with response transformation (presenter)

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 DB_ORM_TYPE=typeorm # typeorm or drizzle
+NODE_ENV=production # development or production
 
 DB_HOST=localhost
 DB_PORT=5432
@@ -7,3 +8,5 @@ DB_PASSWORD=
 DB_DATABASE=library_db 
 
 PORT=3000
+
+
