feat: integrate Sentry

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 DB_ORM_TYPE=typeorm # typeorm or drizzle
 NODE_ENV=production # development or production
+SENTRY_DSN=
 
 DB_HOST=localhost
 DB_PORT=5432
