--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.json --runInBand",
     "drizzle:generate": "drizzle-kit generate",
     "drizzle:migrate": "node -r ts-node/register src/database/drizzle/migrate.ts",
     "drizzle:studio": "drizzle-kit studio",
